pkg/controller/service/testdata/ingress/prefix/prefix-1/expected.yaml.d/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: app-name
  namespace: app-namespace
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/container-name": "con1"
    "acorn.io/managed": "true"
    "allconsl1": "value"
    "conl1": "value"
    "conl3": "value"
    "globall1": "value"
    "globall2": "value"
  annotations:
    "allconsa1": "value"
    "cona1": "value"
    "cona3": "value"
    "globala1": "value"
    "globala2": "value"
spec:
  type: ExternalName
  externalName: con1.app-created-namespace.svc.cluster.local
  ports:
    - port: 80
      targetPort: 81
      protocol: "TCP"
      appProtocol: "HTTP"
      name: "80"
---
kind: Service
apiVersion: v1
metadata:
  name: con1
  namespace: app-created-namespace
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/container-name": "con1"
    "acorn.io/managed": "true"
    "allconsl1": "value"
    "conl1": "value"
    "conl3": "value"
    "globall1": "value"
    "globall2": "value"
  annotations:
    "allconsa1": "value"
    "cona1": "value"
    "cona3": "value"
    "globala1": "value"
    "globala2": "value"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 81
      protocol: "TCP"
      appProtocol: "HTTP"
      name: "80"
  selector:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    acorn.io/managed: "true"
    "acorn.io/container-name": "con1"
